--- a/professional/cv/resume.css
+++ b/professional/cv/resume.css
@@ -14,8 +14,8 @@ h1, h2, div.contents, th.docinfo-name {
 h1 {
   font-size: x-large }
 
-dt {
-  font-weight: bold }
+/*dt {
+  font-weight: bold }*/
 
 .first {
   margin-top: 0 }
@@ -71,6 +71,19 @@ div.footer, div.header {
   font-size: smaller ;
   text-align: center }
 
+div.sidebar {
+  margin-left: 1em ;
+  border: thin solid ;
+  padding: 0.5em ;
+  background-color: #ffffee ;
+  width: 40% ;
+  float: right ;
+  clear: right }
+
+div.sidebar p.rubric {
+  font-family: sans-serif ;
+  font-size: medium }
+
 div.system-messages {
   margin: 5em }
 
@@ -125,6 +138,17 @@ p.credits {
 
 p.label {
   white-space: nowrap }
+
+p.rubric {
+  font-family: sans-serif ;
+  font-weight: bold ;
+  font-size: x-large ;
+  text-align: center }
+
+p.sidebar-title {
+  font-family: sans-serif ;
+  font-weight: bold ;
+  font-size: larger }
 
 p.topic-title {
   font-weight: bold }
