--- a/default.css
+++ b/default.css
@@ -8,6 +8,14 @@
 Default cascading style sheet for the HTML output of Docutils.
 */
 
+@media print
+{    
+    .no-print, .no-print *
+    {
+        display: none !important;
+    }
+}
+
 /* used to remove borders from tables and images */
 .borderless, table.borderless td, table.borderless th {
   border: 0 }
@@ -36,6 +44,12 @@ table.borderless td, table.borderless th {
 
 .huge {font-size: 200%;}
 
+.double {font-size: 200%;}
+
+.triple {font-size: 300%;}
+
+.quadruple {font-size: 400%;}
+
 .large {
   font-weight: bold ;
   font-size: larger }
@@ -46,11 +60,64 @@ table.borderless td, table.borderless th {
 .hidden {
   display: none }
 
+.key {
+  margin: 0.5px;
+  padding: 1px 2px 1px 2px;    
+  border-radius: 3px;
+  border: 1px solid grey;
+  background: light-grey;
+  display: inline-flex;
+}
+
+.two-column {
+  -webkit-column-count: 2; /* Chrome, Safari, Opera */
+  -webkit-column-gap: 100px; /* Chrome, Safari, Opera */
+  -moz-column-count: 2; /* Firefox */
+  -moz-column-gap: 100px; /* Firefox */
+  column-count: 2;
+  column-gap: 100px;
+}
+
+.multicolumn {
+  -moz-column-gap: 4em; /* Firefox */
+  -moz-column-width: 400px;
+  -webkit-column-gap: 4em; /* Chrome, Safari, Opera */
+  -webkit-column-width: 400px;
+  column-gap: 4em;
+  column-width: 400px;
+}
+
+.multicolumn-medium {
+  -moz-column-gap: 4em; /* Firefox */
+  -moz-column-width: 300px;
+  -webkit-column-gap: 4em; /* Chrome, Safari, Opera */
+  -webkit-column-width: 300px;
+  column-gap: 4em;
+  column-width: 300px;
+}
+
+.multicolumn-narrow {
+  -moz-column-gap: 4em; /* Firefox */
+  -moz-column-width: 200px;
+  -webkit-column-gap: 4em; /* Chrome, Safari, Opera */
+  -webkit-column-width: 200px;
+  column-gap: 4em;
+  column-width: 200px;
+}
+
 .italic {
   font-style: italic }
 
 .bold {
   font-style: bold }
+
+.subscript {
+  vertical-align: sub;
+  font-size: smaller }
+
+.superscript {
+  vertical-align: super;
+  font-size: smaller }
 
 a.toc-backref {
   text-decoration: none ;
@@ -61,6 +128,10 @@ blockquote.epigraph {
 
 dl.docutils dd {
   margin-bottom: 0.5em }
+
+object[type="image/svg+xml"], object[type="application/x-shockwave-flash"] {
+  overflow: hidden;
+}
 
 /* Uncomment (and remove this text!) to get bold-faced definition list terms
 dl.docutils dt {
@@ -88,7 +159,7 @@ div.tip p.admonition-title {
 
 div.attention p.admonition-title, div.caution p.admonition-title,
 div.danger p.admonition-title, div.error p.admonition-title,
-div.warning p.admonition-title {
+div.warning p.admonition-title, .code .error {
   color: red ;
   font-weight: bold ;
   font-family: sans-serif }
@@ -112,7 +183,8 @@ div.dedication p.topic-title {
   font-style: normal }
 
 div.figure {
-  margin-left: 2em }
+  margin-left: 2em ;
+  margin-right: 2em }
 
 div.footer, div.header {
   text-align: center ;
@@ -163,6 +235,11 @@ h1.section-subtitle, h2.section-subtitle, h3.section-subtitle,
 h4.section-subtitle, h5.section-subtitle, h6.section-subtitle {
   margin-top: 0.4em }
 
+h1, h2, h3, h4, h5 {
+  page-break-after: avoid ;
+  break-after: avoid ;
+  -webkit-column-break-after: avoid ; }
+
 h1.title {
   text-align: center }
 
@@ -172,12 +249,38 @@ h2.subtitle {
 hr.docutils {
   width: 75% }
 
-img.align-left {
-  clear: left }
+img {
+  margin-bottom: 1em }
 
-img.align-right {
+img.align-left, .figure.align-left, object.align-left {
+  clear: left ;
+  float: left ;
+  margin-right: 1em }
+
+img.align-right, .figure.align-right, object.align-right {
+  clear: right ;
   float: right ;
-  clear: right }
+  margin-left: 1em }
+
+img.align-center, .figure.align-center, object.align-center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.align-left {
+  text-align: left }
+
+.align-center {
+  clear: both ;
+  text-align: center }
+
+.align-right {
+  text-align: right }
+
+/* reset inner alignment in figures */
+div.align-right {
+  text-align: inherit }
 
 img.borderless {
   border: 0 }
@@ -201,8 +304,8 @@ ol.upperroman {
   list-style: upper-roman }
 
 p.attribution {
-  text-align: right ;
-  margin-left: 50% }
+  /* text-align: right ; */
+  /* margin-left: 50% */ }
 
 p.caption {
   font-style: italic }
@@ -235,17 +338,24 @@ p.topic-title {
 pre.address {
   margin-bottom: 0 ;
   margin-top: 0 ;
-  font-family: serif ;
-  font-size: 100% }
+  font: inherit }
 
 pre.line-block {
   font-family: serif ;
   font-size: 100% }
 
-pre.literal-block, pre.doctest-block {
+pre.literal-block, pre.doctest-block, pre.math, pre.code {
   margin-left: 2em ;
-  margin-right: 2em ;
-  background-color: #eeeeee }
+  margin-right: 2em }
+
+pre.code .ln { color: grey; } /* line numbers */
+pre.code, code { background-color: #eeeeee }
+pre.code .comment, code .comment { color: #5C6576 }
+pre.code .keyword, code .keyword { color: #3B0D06; font-weight: bold }
+pre.code .literal.string, code .literal.string { color: #0C5404 }
+pre.code .name.builtin, code .name.builtin { color: #352B84 }
+pre.code .deleted, code .deleted { background-color: #DEB0A1}
+pre.code .inserted, code .inserted { background-color: #A3D289}
 
 span.classifier {
   font-family: sans-serif ;
@@ -310,12 +420,24 @@ table.docutils th.field-name, table.docinfo th.docinfo-name {
   white-space: nowrap ;
   padding-left: 0 }
 
+/* "booktabs" style (no vertical lines) */
+table.docutils.booktabs {
+  border: 0px;
+  border-top: 2px solid;
+  border-bottom: 2px solid;
+  border-collapse: collapse;
+}
+table.docutils.booktabs * {
+  border: 0px;
+}
+table.docutils.booktabs th {
+  border-bottom: thin solid;
+  text-align: left;
+}
+
 h1 tt.docutils, h2 tt.docutils, h3 tt.docutils,
 h4 tt.docutils, h5 tt.docutils, h6 tt.docutils {
   font-size: 100% }
-
-tt.docutils {
-  background-color: #eeeeee }
 
 ul.auto-toc {
   list-style-type: none }
